@@ -33,7 +33,7 @@ def test_header_fields(response_mock):
     with response_mock('''
         GET http://yandex.ru
         
-        Content-Type: text/html; charset=UTF-8
+        Content-Type: image/png
         Cache-Control: no-cache,no-store,max-age=0,must-revalidate
         Set-Cookie: key1=val1
         
@@ -43,7 +43,7 @@ def test_header_fields(response_mock):
         assert result.ok
         assert result.content == b'Nicer'
         assert dict(result.headers) == {
-            'Content-Type': 'text/plain, text/html; charset=UTF-8',
+            'Content-Type': 'image/png',
             'Cache-Control': 'no-cache,no-store,max-age=0,must-revalidate',
             'Set-Cookie': 'key1=val1'
         }
