@@ -2,6 +2,11 @@ pytest-responsemock changelog
 =============================
 
 
+Unreleased
+----------
+* Handle setting 'Content-Type' header correctly.
+
+
 v1.0.0 [2020-07-26]
 -------------------
 + Add support for binary responses.
